--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.kotlin_version = '1.2.10'
+
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.2.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
